# libmrhls

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/libmrhls_Directory/Error/MRH_LocalStreamError/: MRH_Local_Stream_Error_Type.rst
doc/source/Enumerations/libmrhls_Directory/MRH_StreamMessage/: MRH_LS_Message.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrhls_Directory/Error/MRH_LocalStreamErrorInternal/: MRH_ERR_SetLocalStreamError.rst
doc/source/Functions/_Internal/libmrhls_Directory/MRH_LocalStream/: MRH_AcceptStreamConnection.rst  MRH_ConnectToStream.rst  MRH_CreateStreamObject.rst  MRH_GetReadSize.rst  MRH_GetTotalSize.rst  MRH_ResetMessage.rst
doc/source/Functions/libmrhls_Directory/Error/MRH_LocalStreamError/: MRH_ERR_GetLocalStreamError.rst  MRH_ERR_GetLocalStreamErrorString.rst  MRH_ERR_LocalStreamReset.rst
doc/source/Functions/libmrhls_Directory/MRH_LocalStream/: MRH_LS_Close.rst  MRH_LS_Connect.rst  MRH_LS_Disconnect.rst  MRH_LS_GetConnected.rst  MRH_LS_GetWriteMessageSet.rst  MRH_LS_Open.rst  MRH_LS_Read.rst  MRH_LS_Write.rst  MRH_LS_WriteContinue.rst
doc/source/Functions/libmrhls_Directory/MRH_LocalStreamRevision/: MRH_GetLocalStreamLibraryVersionMajor.rst  MRH_GetLocalStreamLibraryVersionMinor.rst  MRH_GetLocalStreamLibraryVersionPatch.rst
doc/source/Functions/libmrhls_Directory/MRH_StreamMessage/: MRH_LS_BufferToMessage.rst  MRH_LS_GetBufferMessage.rst  MRH_LS_MessageToBuffer.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/_Internal/libmrhls_Directory/MRH_LocalStreamInternal/: LOCAL_STREAM_FILE_PATH_SIZE.rst  STREAM_MESSAGE_SEND_BUFFER_SIZE.rst
doc/source/Macros/libmrhls_Directory/MRH_LocalStreamRevision/: MRH_LOCAL_STREAM_LIB_VERSION_MAJOR.rst  MRH_LOCAL_STREAM_LIB_VERSION_MINOR.rst  MRH_LOCAL_STREAM_LIB_VERSION_PATCH.rst
doc/source/Macros/libmrhls_Directory/MRH_StreamMessage/: MRH_STREAM_MESSAGE_AUDIO_BUFFER_SIZE.rst  MRH_STREAM_MESSAGE_BUFFER_SIZE.rst  MRH_STREAM_MESSAGE_CUSTOM_BUFFER_SIZE.rst  MRH_STREAM_MESSAGE_TOTAL_SIZE.rst  MRH_STREAM_MESSAGE_VERSION.rst
doc/source/Messages/: Messages.rst
doc/source/Structs/: Structs.rst
doc/source/Structs/_Internal/libmrhls_Directory/MRH_LocalStreamInternal/: MRH_CurrentStreamMessage_t.rst  MRH_LocalStream_t.rst
doc/source/Structs/libmrhls_Directory/MRH_LocalStream/: MRH_LocalStream_t.rst
doc/source/Structs/libmrhls_Directory/MRH_StreamMessage/: MRH_LS_M_Audio_Data_t.rst  MRH_LS_M_Custom_Data_t.rst  MRH_LS_M_Location_Data_t.rst  MRH_LS_M_String_Data_t.rst  MRH_LS_M_Version_Data_t.rst
doc/source/Usage/: Usage.rst
include/libmrhls/: libmrhls.h
include/libmrhls/libmrhls/: MRH_LocalStream.h  MRH_LocalStreamRevision.h  MRH_StreamMessage.h
include/libmrhls/libmrhls/Error/: MRH_LocalStreamError.h
src/libmrhls/: MRH_LocalStream.c  MRH_LocalStreamInternal.h  MRH_LocalStreamRevision.c  MRH_StreamMessage.c
src/libmrhls/Error/: MRH_LocalStreamError.c  MRH_LocalStreamErrorInternal.h
